feat: add post functionality

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @apply overflow-y-scroll;
+}
+
 body {
   @apply min-h-screen bg-gradient-to-b from-[#040308] to-[#121226] text-white;
 }
