--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -94,7 +94,7 @@
   .token.char,
   .token.builtin,
   .token.inserted {
-    color: hsl(75, 70%, 60%);
+    @apply text-gray-100/80;
   }
 
   .token.operator,
