--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -53,7 +53,7 @@
   }
 
   pre {
-    @apply overflow-y-auto rounded-md bg-black/40 p-4;
+    @apply overflow-y-auto rounded-md border border-slate-800/50 bg-black/40 p-4;
 
     code {
       @apply font-mono text-base text-white/70 md:text-lg;
