--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,10 +7,10 @@ html {
 }
 
 body {
-  @apply min-h-screen bg-gradient-to-b from-[#040308] to-[#101020] text-slate-300/90;
+  @apply min-h-screen bg-[#040408] text-slate-200/80;
 }
 
 input,
 textarea {
-  @apply rounded-sm border border-slate-800/80 bg-transparent py-1 px-2;
+  @apply rounded-sm border border-slate-800/80 bg-transparent px-2 py-1;
 }
