feat: update colors and spacing

--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -35,7 +35,7 @@
   }
 
   ul {
-    @apply list-disc pl-5 marker:text-orange-300/80;
+    @apply list-disc pl-5 marker:text-rose-800;
 
     li {
       @apply mb-0;
