--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -56,7 +56,8 @@
     @apply overflow-y-auto rounded-md border border-slate-800/50 bg-black/40 p-4;
 
     code {
-      @apply font-mono text-base text-white/70 md:text-lg;
+      @apply font-mono text-sm md:text-base;
+      color: #edeef0;
     }
   }
 
@@ -64,19 +65,20 @@
   .token.prolog,
   .token.doctype,
   .token.cdata {
-    @apply text-gray-200/40;
+    @apply text-neutral-200/60;
   }
 
   .token.punctuation {
-    opacity: 0.7;
+    color: #edeef0;
   }
 
   .namespace {
     opacity: 0.7;
   }
 
+  .token.class-name,
   .token.function {
-    @apply text-blue-200/80;
+    color: #70b8ff;
   }
 
   .token.property,
@@ -85,7 +87,7 @@
   .token.number,
   .token.constant,
   .token.symbol {
-    color: hsl(350, 40%, 70%);
+    color: #ff92ad;
   }
 
   .token.selector,
@@ -93,28 +95,25 @@
   .token.string,
   .token.char,
   .token.builtin,
+  .token.regex,
   .token.inserted {
-    @apply text-gray-100/80;
+    color: #0bd8b6;
   }
 
   .token.operator,
   .token.entity,
   .token.url,
+  .token.important,
   .language-css .token.string,
   .style .token.string,
   .token.variable {
-    color: hsl(40, 90%, 60%);
+    color: #ff92ad;
   }
 
   .token.atrule,
   .token.attr-value,
   .token.keyword {
-    @apply text-orange-300/80;
-  }
-
-  .token.regex,
-  .token.important {
-    color: #e90;
+    color: #ff92ad;
   }
 
   .token.important,
