--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -53,7 +53,7 @@
   }
 
   pre {
-    @apply overflow-y-auto rounded-md border border-slate-800/50 bg-black/40 p-4;
+    @apply overflow-y-auto rounded-md border border-neutral-800 bg-black/40 px-4 py-2;
 
     code {
       @apply font-mono text-sm md:text-base;
