--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -30,6 +30,14 @@
     @apply mb-2.5;
   }
 
+  a {
+    @apply underline decoration-rose-800 underline-offset-2 transition-all;
+
+    &:hover {
+      @apply text-rose-400;
+    }
+  }
+
   :not(pre) > code {
     @apply rounded-sm bg-blue-400/10 px-1 font-mono text-base text-white/70 md:text-lg;
   }
