--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -3,19 +3,17 @@
 }
 
 .blog-post {
-  @apply text-base md:text-lg;
-
   p.is-editor-empty:first-child::before {
     content: attr(data-placeholder);
     @apply pointer-events-none float-left h-0 text-white/50;
   }
 
   h1 {
-    @apply mb-6 text-4xl;
+    @apply mb-6 text-4xl font-semibold;
   }
 
   h2 {
-    @apply mb-4 text-3xl;
+    @apply mb-4 text-3xl font-semibold;
   }
 
   h3 {
@@ -31,15 +29,15 @@
   }
 
   a {
-    @apply underline decoration-rose-800 underline-offset-2 transition-all;
+    @apply font-semibold text-rose-700 underline underline-offset-2 transition-all;
 
     &:hover {
-      @apply text-rose-400;
+      @apply text-rose-600;
     }
   }
 
   :not(pre) > code {
-    @apply rounded-sm bg-blue-400/10 px-1 font-mono text-base text-white/70 md:text-lg;
+    @apply rounded border border-neutral-800 px-1 py-0.5 font-mono text-base text-white;
   }
 
   ul {
@@ -61,10 +59,10 @@
   }
 
   pre {
-    @apply overflow-y-auto rounded-md border border-neutral-800 bg-black/40 px-4 py-2;
+    @apply overflow-y-auto rounded-md border border-neutral-800 px-4 py-2;
 
     code {
-      @apply font-mono text-sm md:text-base;
+      @apply font-mono text-base;
       color: #edeef0;
     }
   }
