--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -11,19 +11,19 @@
   }
 
   h1 {
-    @apply mb-6 text-4xl font-semibold;
+    @apply mb-4 text-2xl line-through;
   }
 
   h2 {
-    @apply mb-4 text-3xl font-semibold;
+    @apply mb-4 text-2xl line-through;
   }
 
   h3 {
-    @apply mb-3 text-2xl;
+    @apply mb-6 mt-8 text-3xl font-semibold;
   }
 
   h4 {
-    @apply mb-2.5 text-xl;
+    @apply mb-4 mt-6 text-2xl;
   }
 
   p {
