feat: improve font weight on h4 and strong elements

--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -23,7 +23,7 @@
   }
 
   h4 {
-    @apply mb-4 mt-6 text-2xl;
+    @apply mb-4 mt-6 text-2xl font-medium;
   }
 
   p {
@@ -32,6 +32,11 @@
 
   a {
     @apply font-normal text-white underline decoration-rose-800 underline-offset-4 transition-all hover:text-rose-600;
+  }
+
+  b,
+  strong {
+    @apply font-bold;
   }
 
   :not(pre) > code {
