--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -202,7 +202,7 @@
   }
 
   :not(pre) > code {
-    @apply rounded border border-neutral-800 px-1 py-0.5 font-mono text-base break-words text-white;
+    @apply rounded border px-1 py-0.5 font-mono text-base break-words text-white;
   }
 
   ul {
@@ -222,7 +222,7 @@
   }
 
   pre {
-    @apply overflow-y-auto rounded-md border border-neutral-800 px-4 py-2;
+    @apply overflow-y-auto rounded-md border px-4 py-2;
 
     code {
       @apply font-mono text-base;
