--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,6 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
-/* shadcn/ui theme */
-@custom-variant dark (&:is(.dark *));
-
 /* Tailwind CSS theme customization */
 @theme {
   --default-transition-duration: 200ms;
@@ -19,8 +16,8 @@
   }
 }
 
-/* Make the site to always use dark mode */
 @layer utilities {
+  /* Always use dark mode */
   :root {
     color-scheme: dark;
   }
@@ -40,6 +37,14 @@
   button:not(:disabled),
   [role='button']:not(:disabled) {
     cursor: pointer;
+  }
+
+  /* shadcn/ui theme */
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground font-light;
   }
 }
 
@@ -151,16 +156,6 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-}
-
-/* shadcn/ui theme */
-@layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
-  body {
-    @apply bg-background text-foreground font-light;
-  }
 }
 
 /* Blog post styles */
