--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -220,7 +220,7 @@
   }
 
   pre {
-    @apply overflow-y-auto rounded-md border px-4 py-2;
+    @apply overflow-y-auto px-4 py-2;
 
     code {
       @apply font-mono text-base;
