fix: fix app background color blinking

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,7 +43,7 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground font-light;
+    @apply text-foreground font-light;
   }
 }
 
