--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -177,6 +177,7 @@
   h5,
   h6 {
     scroll-margin-top: calc(var(--spacing-nav) + 1rem);
+    @apply px-5 md:px-10;
   }
 
   h1 {
@@ -196,11 +197,11 @@
   }
 
   p {
-    @apply mb-2.5;
+    @apply mb-2.5 px-5 md:px-10;
   }
 
   a {
-    @apply font-normal text-white underline decoration-rose-800 underline-offset-4 transition-all hover:text-rose-600;
+    @apply font-normal text-white underline decoration-rose-800 underline-offset-4 transition-all;
   }
 
   b,
@@ -209,17 +210,17 @@
   }
 
   :not(pre) > code {
-    @apply rounded border px-1 py-0.5 font-mono text-base break-words text-white;
+    @apply rounded border px-1 py-0.5 font-mono text-base wrap-break-word text-white;
   }
 
   ul {
-    @apply list-disc pl-5 marker:text-rose-800;
+    @apply mx-5 list-disc pl-5 marker:text-rose-800 md:mx-10;
 
     li {
-      @apply mb-0;
+      @apply mb-0 pl-1;
 
       p {
-        @apply mb-0;
+        @apply mb-0 px-0! md:px-0!;
       }
     }
   }
@@ -229,7 +230,7 @@
   }
 
   pre {
-    @apply overflow-y-auto px-4 py-2;
+    @apply overflow-y-auto px-5 py-2;
 
     code {
       @apply font-mono text-base;
